--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,7 @@ h6 {
   height: 100vh;
   background: url("../img/home_img.jpg") top center;
   background-size: cover;
+  margin-left:-20px;
 }
 
 #hero:before {
@@ -241,6 +242,7 @@ h6 {
   left: 0;
   right: 0;
   z-index: 1;
+
 }
 
 #hero .hero-container {
@@ -1136,11 +1138,7 @@ details > p {
   margin: 0;
 }
 
-.group-box .card {
-  /* padding: 25px */
-  width: 30rem;
-  margin: 25px;
-}
+
 .recentNews {
   background-color: rgb(20, 117, 175)  
 }
@@ -1227,3 +1225,41 @@ details > p {
 .btn-news.btn-contests a:hover {
   color: #000;
 }
+.card-text {
+  margin: 0;
+}
+.card {
+  margin: 10px;
+}
+
+    /* CSS cho màn hình trắng đẹp */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0,0,0,0.7);
+    }
+
+    .modal-content {
+      position: absolute;
+      top: 50%;
+      left: 57%;
+      transform: translate(-50%, -50%);
+      background-color: #fff;
+      padding: 20px;
+      box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    /* CSS cho nút đóng video */
+    .close {
+      color: #000;
+      font-size: 2em;
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      text-decoration: none;
+    }
